src/objects/AMS_Operation__c.object
<CustomObject>
    <description>Object used to store the connection between a DPC system and a country.</description>
    <fields>
        <fullName>Allow_multiple_remittances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked will allow more than one value for Remittance Frequency for Agencies of the same country</description>
        <inlineHelpText>If checked will allow more than one value for Remittance Frequency for Agencies of the same country</inlineHelpText>
        <label>Allow multiple remittances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASS_Operations__c</fullName>
        <description>Represents types of CASS Operations. Can be either an &quot;EXP&quot;, an &quot;IMP&quot;, a &quot;Courier&quot; or a &quot;Local&quot; operation</description>
        <label>CASS Operations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>IMP</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Related ISO Country</description>
        <label>Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Operations Codes</relationshipLabel>
        <relationshipName>DPC_Operations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Represents either the market is &quot;International&quot; or &quot;Domestic&quot;</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                    <default>true</default>
                    <label>International</label>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settlement__c</fullName>
        <description>Related ISS Operation</description>
        <label>ISS Billing Environment</label>
        <referenceTo>AMS_Settlement_System__c</referenceTo>
        <relationshipLabel>Operations Codes</relationshipLabel>
        <relationshipName>DPC_Operations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AMS Operation  Code</label>
    <nameField>
        <label>AMS DPC Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>